<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CadastroActivity"
    android:id="@+id/linearlayout">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_da_lista"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descri_o"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_weight="4"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/ibData"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="12sp"
            android:paddingLeft="6sp"
            android:paddingRight="6sp"
            android:clickable="true"
            android:onClick="imageButtonOnClick"
            android:src="@drawable/ic_baseline_calendar_today_24"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/selecione_uma_data"
            android:focusable="true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="bottom|end"
            android:gravity="center"
            android:text="@string/pr_ximo"
            android:textColor="#273377"
            app:backgroundTint="?attr/colorPrimary"
            app:tint="#273377"
            />


    </LinearLayout>

</LinearLayout>